--- a/.prettierrc
+++ b/.prettierrc
@@ -1,9 +1,13 @@
 {
-    "printWidth": 150,
-    "tabWidth": 2,
+    "semi": false,
     "singleQuote": true,
-    "trailingComma": "all",
-    "semi": true,
-    "arrowParens": "avoid",
-    "endOfLine": "crlf"
-}
+    "printWidth": 100,
+    "overrides": [
+      {
+        "files": ["*.yaml", "*.yml"],
+        "options": {
+          "singleQuote": false
+        }
+      }
+    ]
+  }
