--- a/.eslintrc
+++ b/.eslintrc
@@ -1,18 +1,85 @@
 {
-  "parser": "@typescript-eslint/parser",
-  "extends": ["prettier", "plugin:@typescript-eslint/recommended", "plugin:prettier/recommended"],
-  "parserOptions": {
-    "ecmaVersion": 2018,
-    "sourceType": "module"
-  },
+  "parserOptions": { "project": "./tsconfig.json" },
+  "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended", "prettier"],
+  "plugins": ["import"],
   "rules": {
-    "@typescript-eslint/explicit-member-accessibility": 0,
-    "@typescript-eslint/explicit-function-return-type": 0,
-    "@typescript-eslint/no-parameter-properties": 0,
-    "@typescript-eslint/interface-name-prefix": 0,
-    "@typescript-eslint/explicit-module-boundary-types": 0,
-    "@typescript-eslint/no-explicit-any": "off",
-    "@typescript-eslint/ban-types": "off",
-    "@typescript-eslint/no-var-requires": "off"
-  }
+    // Base
+    "no-undef": ["off"],
+    "curly": ["error", "all"],
+    "no-console": ["error"],
+    "eqeqeq": ["error", "allow-null"],
+    "spaced-comment": ["error", "always", { "markers": ["/"] }], // Require space after comment; markers allows triple slash
+    "no-nested-ternary": ["error"],
+    "prefer-template": ["error"],
+
+    // Import
+    "import/namespace": "off", // Redundant with TypeScript
+    "import/order": [
+      "error",
+      {
+        "pathGroups": [
+          {
+            "pattern": "@touchbistro/**",
+            "group": "external",
+            "position": "after"
+          }
+        ],
+        "pathGroupsExcludedImportTypes": ["builtin"],
+        "groups": ["builtin", "external", "internal", "parent", "sibling", ["unknown"]],
+        "alphabetize": {
+          "order": "asc"
+        }
+      }
+    ],
+    "import/no-extraneous-dependencies": [
+      "error",
+      {
+        "devDependencies": ["**/test/**", "dangerfile.ts", "scripts/**", "testEnvironment.js"]
+      }
+    ],
+    "import/no-cycle": ["error"],
+    "no-restricted-imports": [
+      "error",
+      {
+        "patterns": [
+          {
+            "group": [".*"],
+            "message": "Relative imports are forbidden. Use absolute imports instead."
+          }
+        ]
+      }
+    ],
+    "no-restricted-syntax": [
+      "error",
+      {
+        "selector": ":matches(PropertyDefinition, MethodDefinition)[accessibility='private']",
+        "message": "Use # instead of private or underscore to declare a private method or property: \nhttps://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Classes/Private_class_fields"
+      }
+    ],
+
+    // TypeScript
+    "@typescript-eslint/no-explicit-any": ["error"],
+    "@typescript-eslint/no-unused-vars": ["error", { "argsIgnorePattern": "^_" }],
+    "@typescript-eslint/no-floating-promises": ["error"],
+    "@typescript-eslint/no-non-null-assertion": ["error"],
+    "@typescript-eslint/explicit-function-return-type": [
+      "error",
+      {
+        "allowExpressions": true,
+        "allowTypedFunctionExpressions": true
+      }
+    ]
+  },
+  "overrides": [
+    {
+      "files": ["**/test/**"],
+      "extends": ["plugin:jest/recommended"],
+      "rules": {
+        "@typescript-eslint/no-non-null-assertion": "off",
+        "jest/no-conditional-expect": "off",
+        "jest/no-commented-out-tests": "off",
+        "jest/expect-expect": "off"
+      }
+    }
+  ]
 }
