--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "deploy:dev": "pm2 start ecosystem.config.js --only dev"
   },
   "dependencies": {
+    "axios": "^1.2.3",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
@@ -39,6 +40,7 @@
     "mysql": "^2.18.1",
     "objection": "^3.0.1",
     "pg": "^8.8.0",
+    "querystring": "^0.2.1",
     "swagger-jsdoc": "^6.2.1",
     "swagger-ui-express": "^4.5.0",
     "winston": "^3.8.1",
