--- a/.env.test.local
+++ b/.env.test.local
@@ -1,5 +1,5 @@
 # PORT
-PORT = 9000
+PORT = 3000
 
 # DATABASE
 DB_HOST = localhost
@@ -18,3 +18,9 @@ LOG_DIR = ../logs
 # CORS
 ORIGIN = *
 CREDENTIALS = true
+
+# SHAREPOINT
+TENANT_ID = dummy
+CLIENT_ID = dummy
+CLIENT_CREDENTIALS = dummy
+DRIVE_ID = dummy
