--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "lint": "eslint --ignore-path .gitignore --ext .ts src/",
     "lint:fix": "npm run lint -- --fix",
     "seed": "knex seed:run --knexfile=knexfile.ts --verbose",
-    "migrate": "knex migrate:latest --knexfile=knexfile.ts --verbose",
+    "db-migrate": "knex migrate:latest --knexfile=knexfile.ts --verbose",
+    "db-recreate": "yarn build && node dist/scripts/db-recreate.js",
+    "db-prepare": "yarn db-recreate && yarn db-migrate",
     "rollback": "knex migrate:rollback --knexfile=knexfile.ts --verbose",
     "make:seeder": "knex seed:make --knexfile=knexfile.ts -x ts --env development",
     "make:migration": "knex migrate:make --knexfile=knexfile.ts -x ts --env development",
