--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "hpp": "^0.2.3",
     "jsonwebtoken": "^8.5.1",
     "knex": "^2.2.0",
+    "luxon": "^3.2.1",
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
     "objection": "^3.0.1",
@@ -60,6 +61,7 @@
     "@types/jest": "^28.1.6",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/knex": "^0.16.1",
+    "@types/luxon": "^3.2.0",
     "@types/morgan": "^1.9.3",
     "@types/node": "^17.0.45",
     "@types/supertest": "^2.0.12",
