parsing file out

--- a/.env.development.local
+++ b/.env.development.local
@@ -20,7 +20,7 @@ ORIGIN = *
 CREDENTIALS = true
 
 # SHAREPOINT
-TENANT_ID = dummy
-CLIENT_ID = dummy
-CLIENT_CREDENTIALS = dummy
-DRIVE_ID = dummy
+TENANT_ID = 2246f3d0-0ab6-418c-8216-db7e3afe1606
+CLIENT_ID = 7a399b91-aab0-405f-b613-467a799f5cf2
+CLIENT_CREDENTIALS = 1Ch8Q~z-bURNe8V9Hl5J6M3WEMfNLruj3ykOaaft
+DRIVE_ID = b!UYBdJXCaWkudcT-Ph6QaBrHqfSgi0z1EhEcFwF3jjTP2WkslyhrKQojmj8bqorol
