--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,6 +41,14 @@ services:
     - POSTGRES_DB=dev
     networks:
       - backend
+  redis:
+    image: redis:6.2-alpine
+    restart: always
+    ports:
+      - '6379:6379'
+    command: redis-server --save 20 1 --loglevel warning --requirepass eYVX7EwVmmxKPCDmwMtyKVge8oLd2t81
+    volumes:
+      - redis:/data
 
 networks:
   backend:
@@ -48,4 +56,6 @@ networks:
 
 volumes:
   data:
+    driver: local
+  redis:
     driver: local
