--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "helmet": "^5.1.1",
     "hpp": "^0.2.3",
     "intuit-oauth": "^4.0.0",
+    "ioredis": "^5.3.2",
     "jsonwebtoken": "^8.5.1",
     "knex": "^2.2.0",
     "luxon": "^3.2.1",
@@ -45,6 +46,7 @@
     "mysql": "^2.18.1",
     "objection": "^3.0.1",
     "pg": "^8.8.0",
+    "promisify": "^0.0.3",
     "querystring": "^0.2.1",
     "swagger-jsdoc": "^6.2.1",
     "swagger-ui-express": "^4.5.0",
