--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "deploy:dev": "pm2 start ecosystem.config.js --only dev"
   },
   "dependencies": {
+    "aws-sdk": "^2.1373.0",
     "axios": "^1.2.3",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.5.1",
@@ -43,6 +44,7 @@
     "knex": "^2.2.0",
     "luxon": "^3.2.1",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "objection": "^3.0.1",
     "pg": "^8.8.0",
