--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "luxon": "^3.2.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
     "mysql": "^2.18.1",
     "objection": "^3.0.1",
     "pg": "^8.8.0",
