--- a/.gitignore
+++ b/.gitignore
@@ -130,3 +130,23 @@ dist
 .pnp.*
 .env.development.*
 EJ2-Spreadsheet-WebServices/ASP.NET CORE/Core/obj
+src/nextclerk-tmp/1d5efe2d-7b31-472a-bd5f-ce347cfa3de7.xlsx
+src/nextclerk-tmp/2cef16f0-7cf4-490d-b86e-b18fd9b7c94d.xlsx
+src/nextclerk-tmp/2d86c73f-4a9f-47f9-b495-ff559fe6cad6.xlsx
+src/nextclerk-tmp/3de24234-2313-434b-b359-128b09ac7031.xlsx
+src/nextclerk-tmp/6e08c913-0b6e-4d07-bb51-b1a8def6aa46.xlsx
+src/nextclerk-tmp/7db3cc1d-3c57-4205-bc54-2b382110412b.xlsx
+src/nextclerk-tmp/8e09317e-1b1b-454c-911f-c09c9a100073.xlsx
+src/nextclerk-tmp/22c328a3-4601-4e09-b47d-dc28b2a1137b.xlsx
+src/nextclerk-tmp/047b26e0-90eb-4c77-875a-ea7f04295d77.xlsx
+src/nextclerk-tmp/63ba8e4a-450e-4a18-ac2c-9dd20bf950a6.xlsx
+src/nextclerk-tmp/73da25a8-079d-4aa3-b570-32475797d8dd.xlsx
+src/nextclerk-tmp/78f95697-c3e4-4824-b17e-a221e06d030c.xlsx
+src/nextclerk-tmp/93bc0b8d-7872-4338-a752-e926c5d06688.xlsx
+src/nextclerk-tmp/976c0016-b523-44fc-8d1b-3d4e1fd4d1fc.xlsx
+src/nextclerk-tmp/3125c600-cc99-499c-b1fa-f7603b244125.xlsx
+src/nextclerk-tmp/6887bac4-6722-40c5-9f8b-44225f82f9a3.xlsx
+src/nextclerk-tmp/70109a0f-97a1-464e-a963-c91741b76f9c.xlsx
+src/nextclerk-tmp/bc0906fa-daf8-4c57-ab23-0066d84e12d5.xlsx
+src/nextclerk-tmp/d23f5797-7d9a-420d-beef-b67fc604d0e4.xlsx
+src/nextclerk-tmp/ecb475e8-9c6c-44ed-b722-8cd26b208d31.xlsx
