--- a/.gitignore
+++ b/.gitignore
@@ -150,3 +150,8 @@ src/nextclerk-tmp/70109a0f-97a1-464e-a963-c91741b76f9c.xlsx
 src/nextclerk-tmp/bc0906fa-daf8-4c57-ab23-0066d84e12d5.xlsx
 src/nextclerk-tmp/d23f5797-7d9a-420d-beef-b67fc604d0e4.xlsx
 src/nextclerk-tmp/ecb475e8-9c6c-44ed-b722-8cd26b208d31.xlsx
+src/nextclerk-tmp/6a7013c4-3d83-4796-b6ce-fb25c5976bad.xlsx
+src/nextclerk-tmp/b28767a7-551e-4308-8eb1-2c42e59eb04d.xlsx
+src/nextclerk-tmp/dd6c0878-bbeb-4135-8f67-ba0b0946709d.xlsx
+src/nextclerk-tmp/f0b0fa88-6bc3-404c-9da4-ba100bcd73ff.xlsx
+src/routes/nextclerk-tmp/b28767a7-551e-4308-8eb1-2c42e59eb04d.xlsx
