--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,36 +11,36 @@ services:
   #   restart: 'unless-stopped'
   #   networks:
   #     - backend
-  # server:
-  #   build:
-  #     context: ./
-  #     target: production-build-stage
-  #     dockerfile: ./Dockerfile
-  #   container_name: server
-  #   ports:
-  #     - '3000:3000'
-  #   volumes:
-  #     - ./:/app
-  #     - /app/node_modules
-  #   restart: on-failure
-  #   networks:
-  #     - backend
-  #   links:
-  #     - postgres
-  #   depends_on:
-  #     - postgres
-  #     - redis
-  #     - spreadsheet-api-service
+  server:
+    build:
+      context: ./
+      target: production-build-stage
+      dockerfile: ./Dockerfile
+    container_name: server
+    ports:
+      - '3000:3000'
+    volumes:
+      - ./:/app
+      - /app/node_modules
+    restart: on-failure
+    networks:
+      - backend
+    links:
+      - postgres
+    depends_on:
+      - postgres
+      - redis
+      - spreadsheet-api-service
   postgres:
     restart: always
-    image: postgres:latest
+    image: postgres:13-buster
     container_name: postgres
     ports:
       - "5432:5432"
     environment:
-    - POSTGRES_PASSWORD=P@55word12345
-    - POSTGRES_USER=dev
-    - POSTGRES_DB=dev
+      - POSTGRES_PASSWORD=P@55word12345
+      - POSTGRES_USER=dev
+      - POSTGRES_DB=dev
     networks:
       - backend
   redis:
