change call back

--- a/.env.test.local
+++ b/.env.test.local
@@ -35,7 +35,7 @@ TEMP_QUICKBOOKS_CLIENT_ID = ABdTEZDKtuSlOnbgF8AIL0h0Df7BSLFgYMJ8JzvR3T0Gf3UxpH
 TEMP_QUICKBOOKS_CLIENT_SECRET = WzEf4MJqoDSfag3vfhRT9EyXRZO6kYBKIpTpRsIo
 TEMP_QUICKBOOKS_APPLICATION_ID = 4620816365325240560
 QUICKBOOKS_CALLBACK_API = http://localhost:3000/third-party-auth/quickbooks
-QUICKBOOKS_CALLBACK_API_PROD = http://test.nextclerk.com/third-party-auth/quickbooks
+QUICKBOOKS_CALLBACK_API_PROD = http://test.nextclerk.com:3000/third-party-auth/quickbooks
 
 # REDIS
 REDIS_HOST: localhost
