--- a/.env.development.local
+++ b/.env.development.local
@@ -48,3 +48,6 @@ REDIS_PASSWORD: eYVX7EwVmmxKPCDmwMtyKVge8oLd2t81
 AWS_ACCESS_KEY_ID=AKIA3QRZS5O4BFX6VAFH
 AWS_SECRET_ACCESS_KEY=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
 BUCKET_NAME=supporting-packages
+
+#TEMP REMOVE THIS
+NODE_TLS_REJECT_UNAUTHORIZED=0
