--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "envalid": "^7.3.1",
     "exceljs": "^4.3.0",
     "express": "^4.18.1",
+    "express-async-errors": "^3.1.1",
     "express-openapi-validator": "^5.0.0",
     "helmet": "^5.1.1",
     "hpp": "^0.2.3",
